Correcting styles on mobile that got corrupted as a result of organization

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -57,6 +57,5 @@ body {
 @media (max-width: 640px) {
     .card {
         max-width: 100%;
-        padding: 100px 15px 0 15px;
     }
 }
